Resolvendo problemas de validação e otimizando codigo