@@ -14,4 +14,4 @@ WORKDIR /rinha-backend-2024
 COPY --from=build /rinha-backend-2024/build/libs/rinha-backend-2024-1.0.0-all.jar app.jar
 COPY conf conf
 EXPOSE 8080
-CMD ["java","-verbose:gc","-XX:+PrintGCDetails","-server","-XX:InitialRAMPercentage=75", "-XX:MaxRAMPercentage=75", "-jar", "app.jar"]
+CMD ["java","-XX:+UseStringDeduplication","-XX:+UseG1GC","-server","-XX:InitialRAMPercentage=75", "-XX:+DisableExplicitGC", "-XX:MaxRAMPercentage=75", "-jar", "app.jar"]
